# IIS

./: .dockerignore  .gitignore  Dockerfile  README.md  data.dvc  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: data_workflow.yaml  model_workflow.yaml  service_test_workflow.yaml  service_workflow.yaml
data/processed/: data.csv
data/raw/: mbajk_api.csv
data/raw/mbajk/: mbajk_api.csv
data/raw/weather/: weather_api.csv
gx/: great_expectations.yml
gx/checkpoints/: my_checkpoint.yml
gx/expectations/: .ge_store_backend_id  suite.json
models/: simple-rnn.h5  simple-rnn.keras
notebooks/: 1.ipynb  2.ipynb  assignment-1.ipynb
reports/: metrics.txt  train_metrics.txt
scalers/: standard.pkl
src/: test.txt
src/client/: Dockerfile
src/client/src/: styles.scss
src/client/src/app/: app.component.html  app.component.ts  app.module.ts  network.service.ts
src/constants/: data_constants.py  model_constants.py
src/data/: fetch_data.py  preprocess_data.py  reference_update.py  split_data.py  stability_data.py  validate_data.py
src/models/: evaluate_model.py  evaluate_results.py  predict_model.py  train_model.py
src/models/utils/: helper.py  reshaper.py
src/serve/: server.py  utils.py
src/serve/test/: test_service.py
tests/: test_api_availability.py  test_service.py
